--- a/index.css
+++ b/index.css
@@ -1,17 +1,24 @@
+body {
+    width: 100px;
+    height: 100px;
+    margin: 0px;
+    padding: 0px;
 
-.wrapper {
-	display: grid;
+}
+
+
+.grid-container {
+    display: grid;
 	grid-template-columns: repeat(4, 1fr);
     grid-template-rows: 400px 100px 100px;
     grid-gap: 0.25em;
+    justify-items: center;
  
-}
+} 
 
-.wrapper > div {
-	background-color:#eee;
-    padding: 1em;
-}
 
-.grid-item1 {
-	grid-column: 1 / 5;
+div.grid-item {
+    grid-column: 1 / 5;
+   
+    
 }
