--- a/index.css
+++ b/index.css
@@ -1,24 +1,44 @@
 body {
-    width: 100px;
-    height: 100px;
-    margin: 0px;
-    padding: 0px;
-
-}
-
-
-.grid-container {
+    width: 90%;
+    margin: 0 auto;
+  }
+  
+  .grid-container {
     display: grid;
-	grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: 400px 100px 100px;
-    grid-gap: 0.25em;
-    justify-items: center;
- 
-} 
-
-
-div.grid-item {
-    grid-column: 1 / 5;
-   
-    
-}
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 1.25em;
+    box-sizing: border-box;
+    margin-bottom: 40px;
+  }
+  
+  .title-image {
+      margin: 40px auto
+  }
+  
+  .title-image img{
+      object-fit: cover;
+      height: 450px;
+      width: 450px;
+      display: block;
+      margin: 0 auto;
+      border-radius: 50%;
+  }
+  
+  .grid-container img {
+      width: 100%;
+      height: 200px;
+      object-fit: cover;
+  }
+  
+  div.grid-item1 {
+      grid-column: 1 / 2;
+  }
+  div.grid-item2 {
+      grid-column: 2 / 3;
+  }
+  div.grid-item3 {
+      grid-column: 3 / 4;
+  }
+  div.grid-item4 {
+      grid-column: 4 / 5;
+  }
